Fixed paragraph spacing

--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -31,6 +31,11 @@ html, body
         &::-webkit-scrollbar
             display: none
 
+br
+    line-height: 0.5px
+    display: block
+    margin: 0
+
 // Typography
 body
     line-height: normal
