--- a/_sass/pages/page.sass
+++ b/_sass/pages/page.sass
@@ -169,5 +169,5 @@ p
     line-height: 1.7
     color: $alpha
     font-weight: 300
-    margin-bottom: 0px
+    margin-bottom: 1.5rem
     letter-spacing: 0.4px
